--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,6 @@ $bg-shadow-border: 0 0 0 1px hsla(0, 1%, 43%, 0.1), 0 4px 11px hsla(0, 0%, 0%, 0
 .main-shadow {
   box-shadow: $bg-shadow;
 }
+.box-shadow {
+  box-shadow: $bg-shadow-border;
+}
