--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 $bg-shadow: 0 4px 2px -2px rgba(58, 58, 58, 0.301);
 $bg-shadow-border: 0 0 0 1px hsla(0, 1%, 43%, 0.1), 0 4px 11px hsla(0, 0%, 0%, 0.1);
 
+$color: rgb(255, 187, 187);
 
 .main-shadow {
   box-shadow: $bg-shadow;
