--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,24 @@
   position: relative;
 }
 
+.selectPlayer__multi-value {
+  margin: 0;
+  &:nth-child(n + 2) {
+    display: none;
+  }
+}
+
+.addPlayer__value-container {
+  padding: 0 0 0 2px !important;
+}
+.addPlayer__option--is-selected {
+  background-color: white !important;
+  color: black !important;
+}
+// .addPlayer__option--is-focused {
+//   background-color: gray !important;
+//   color: black !important;
+// }
 
 $bg-shadow: 0 4px 2px -2px rgba(58, 58, 58, 0.301);
 $bg-shadow-border: 0 0 0 1px hsla(0, 1%, 43%, 0.1), 0 4px 11px hsla(0, 0%, 0%, 0.1);
