--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,20 @@
   width: 100%;
   max-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 .player-list {
-  max-height: 100;
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  justify-content: space-between;
+  .player-list-section {
+    flex: 7;
+  }
+  .player-list-footer {
+    flex: 1;
+  }
 }
 
 .selectPlayer__multi-value {
@@ -31,6 +41,7 @@
 // }
 
 $bg-shadow: 0 4px 2px -2px rgba(58, 58, 58, 0.301);
+$bg-shadow: 0 -4px -2px 2px rgba(58, 58, 58, 0.301);
 $bg-shadow-border: 0 0 0 1px hsla(0, 1%, 43%, 0.1), 0 4px 11px hsla(0, 0%, 0%, 0.1);
 
 $color: rgb(255, 187, 187);
@@ -40,4 +51,31 @@ $color: rgb(255, 187, 187);
 }
 .box-shadow {
   box-shadow: $bg-shadow-border;
+}
+.top-shadow {
+  box-shadow: $bg-shadow-border;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-left: transparent;
+  background-color: white;
+  border-radius: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #343a40;
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(75, 74, 74);
+  cursor: pointer;
 }
