--- a/src/App.scss
+++ b/src/App.scss
@@ -66,6 +66,7 @@
 $bg-shadow: 0 4px 2px -2px rgba(58, 58, 58, 0.301);
 $bg-shadow: 0 -4px -2px 2px rgba(58, 58, 58, 0.301);
 $bg-shadow-border: 0 0 0 1px hsla(0, 1%, 43%, 0.1), 0 4px 11px hsla(0, 0%, 0%, 0.1);
+$overlay: hsla(0, 0%, 0%, 0.3);
 
 $color: rgb(255, 187, 187);
 
@@ -101,4 +102,37 @@ $color: rgb(255, 187, 187);
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(75, 74, 74);
   cursor: pointer;
+}
+
+
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: $overlay;
+}
+
+.modal-box {
+  position: relative;
+  top: 50%; 
+  left: 50%; 
+  right: 50%;
+  border-radius: 4px;
+  max-width: calc(100% - 16px);
+  padding: 8px;
+  transform: translate(-50%, -50%);
+  overflow-y: auto;
+  background-color: white;
+  z-index: 101;
 }
